syntax = "proto3";

package proto;

service UserService {
    rpc addUser (AddUserRequest) returns (AddUserResponse) {}
    rpc getUser (GetUserRequest) returns (GetUserResponse) {}
    rpc getUsers (GetUsersRequest) returns (GetUsersResponse) {}
    rpc updateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc deleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

message AddUserRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
}

message GetUserRequest {
    int64 userId = 1;
}

message GetUserResponse {
    int64 userId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
}

message GetUsersRequest {

}

message GetUsersResponse {
    repeated GetUserResponse users = 1;
}

message AddUserResponse {
    int64 userId = 1;
}

message UpdateUserRequest {
    int64 userId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
}

message UpdateUserResponse {
    int64 userId = 1;
}

message DeleteUserRequest {
    int64 userId = 1;
}

message DeleteUserResponse {

}
